--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,18 @@
             			<artifactId>coveralls-maven-plugin</artifactId>
             			<version>4.1.0</version>
           		</plugin>
+			
+			<plugin>
+    				<groupId>org.codehaus.mojo</groupId>
+   				<artifactId>cobertura-maven-plugin</artifactId>
+    				<version>2.7</version>
+    				<configuration>
+       				 <format>xml</format>
+        				<maxmem>256m</maxmem>
+     
+       					 <aggregate>true</aggregate>
+    				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
