--- a/pom.xml
+++ b/pom.xml
@@ -92,20 +92,22 @@
 			<plugin>
             			<groupId>org.eluder.coveralls</groupId>
             			<artifactId>coveralls-maven-plugin</artifactId>
-            			<version>4.1.0</version>
+            			<version>4.3.0</version>
           		</plugin>
 			
 			<plugin>
-    				<groupId>org.codehaus.mojo</groupId>
-   				<artifactId>cobertura-maven-plugin</artifactId>
-    				<version>2.7</version>
-    				<configuration>
-       				 <format>xml</format>
-        				<maxmem>256m</maxmem>
-     
-       					 <aggregate>true</aggregate>
-    				</configuration>
-			</plugin>
+    				<groupId>org.jacoco</groupId>
+    				<artifactId>jacoco-maven-plugin</artifactId>
+    				<version>0.7.6.201602180812</version>
+    				<executions>
+        			<execution>
+            			<id>prepare-agent</id>
+            			<goals>
+                		<goal>prepare-agent</goal>
+            			</goals>
+        			</execution>
+    			</executions>
+		</plugin>
 		</plugins>
 	</build>
 
