--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,13 @@
 hs_err_pid*
 
 .idea/workspace.xml
+
+target/classes/
+
+.idea/
+
+target/maven-status/maven-compiler-plugin/compile/default-compile/
+
+target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/
+
+target/surefire-reports/
