Cambio de es.inditex.test a es.inditex.api

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ target/maven-status/maven-compiler-plugin/compile/default-compile/
 target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/
 
 target/surefire-reports/
+
+target/maven-archiver/
+
+target/
+
+test.iml
