--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Deploy to Heroku
       uses: AkhileshNS/heroku-deploy@v3.12.12
       with:
-        heroku_api_key:
-        heroku_email: 
-        heroku_app_name: 
+        heroku_api_key: ${{HEROKU_API_KEY}}
+        heroku_email: ${{HEROKU_EMAIL}}
+        heroku_app_name: ${{HEROKU_APP}}
